--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Define o tipo de documento como HTML5 -->
     <meta charset="UTF-8">
+    <!-- Garante que a página seja exibida corretamente em dispositivos móveis, ajustando a escala -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link para o arquivo CSS externo que contém os estilos da página -->
     <link rel="stylesheet" href="style.css">
+    <!-- Título da página que aparece na aba do navegador -->
     <title>Gameboy Tetris Clone em JavaScript</title>
 </head>
 <body>
     
-
+    <!-- Inclusão da biblioteca p5.js, que facilita a criação de gráficos e interação -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/p5.min.js"></script>
+    <!-- Script com definições das peças do jogo Tetris -->
     <script src="pieces.js"></script>
+    <!-- Script principal que contém a lógica do jogo Tetris -->
     <script src="script.js"></script>
 </body>
 </html>
